# MARK01

./: .coverage  .env  .flake8  .gitignore  CODE_OF_CONDUCT.md  DOCKERFILE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  django-tests.yml  flake8.yml
docs/: Presentation.pptx
src/: xakaton.ino
src/ecology/: __main__.py  react.py
src/ecology/djangosite/: asgi.py  settings.py  urls.py  wsgi.py
src/ecology/hackaton/: admin.py  models.py  urls.py  views.py
src/ecology/hackaton/templates/hackaton/: base.html  index.html
src/ecology/hackaton/tests/: __init__.py  get.py
src/ecology/hackaton/views/: __init__.py  add.py  edit.py  general.py  get.py
src/ecology/reactapp/: package-lock.json  package.json
src/ecology/reactapp/src/: App.js  Header.js  constants.js
src/ecology/reactapp/src/Devices/: ConfirmRemovalModal.js  Devices.js  DevicesList.js  DevicesWithAirQListWidget.js  NewDeviceForm.js  NewDeviceModal.js
src/ecology/reactapp/src/Main/: Main.js
src/ecology/reactapp/src/Map/: Map.js
src/ecology/reactapp/src/Map/Floor/: Floor.js  NewFloorForm.js  NewFloorModal.js
tests/: temp.py
