[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/ecology"
]

[project]
name="ecology"
version="0.1"
authors = [
  {name="Геворкян Артём", email="tima-1324@mail.ru"}
  , {name="Черных Александр"}
  , {name="Апостолов Антон"}
  , {name="Новожилов Артём"}
]
description = "Site that takes information from USB device, updates DB and shows information on site"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
  "asgiref" # py3.9 3.8.1
  , "django" # py3.9 4.2.11
  , "sqlparse" # py3.9 0.5.0
  , "typing-extensions" # py3.9 4.11.0
  , "tzdata" # py3.9 2024.1
  , "pyUSB" # py3.9 1.2.1
  , "python-decouple" # py3.9 3.8
  , "django-cors-headers" # py3.9 4.3.1
]
classifiers = [
  "Development Status :: 1 - Planning"
  , "Programming Language :: C"
  , "Programming Language :: Python"
  , "Programming Language :: Python :: 3"
  , "Programming Language :: Python :: 3.9"
  , "Framework :: Django :: 4.2"
  , "Intended Audience :: Science/Research"
  , "Natural Language :: Russian"
  , "Operating System :: Microsoft :: Windows"
  , "Operating System :: Microsoft :: Windows :: Windows 11"
]
requires-python = ">= 3.6"

[project.optional-dependencies]
tests = [
  'flake8' # py3.9 7.0.0
  , 'coverage' # py3.9 7.5.0
]

[project.urls]
Repository = "https://github.com/Macropals/MARK01.git"
